--- a/styles/home.scss
+++ b/styles/home.scss
@@ -89,3 +89,15 @@ body {
   padding: 0 10px;
   text-decoration: none;
 }
+
+.navbar-clientsOn {
+  color: inherit;
+  display: block;
+  float: right;
+  font-weight: 700;
+  font-size: 15px;
+  height: 60px;
+  line-height: 60px;
+  padding: 0 10px;
+  text-decoration: none;
+}
